// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DynamicLabel snapshots > matches snapshot — contrast variant 1`] = `
<label
  class="absolute left-3 transition-all duration-300 pointer-events-none z-10 px-1 bg-contrast text-grey-400 top-1/2 -translate-y-1/2 text-base"
>
  Email
</label>
`;

exports[`DynamicLabel snapshots > matches snapshot — default variant idle 1`] = `
<label
  class="absolute left-3 transition-all duration-300 pointer-events-none z-10 px-1 bg-dynamic-label-surface text-dynamic-label-foreground top-1/2 -translate-y-1/2 text-base"
>
  Email
</label>
`;

exports[`DynamicLabel snapshots > matches snapshot — search variant 1`] = `
<label
  class="absolute left-3 transition-all duration-300 pointer-events-none z-10 px-1 bg-dynamic-label-surface text-dynamic-label-foreground top-1/2 -translate-y-1/2 text-base"
>
  Search
</label>
`;
